--- a/package/deb/amd64/DEBIAN/control
+++ b/package/deb/amd64/DEBIAN/control
@@ -4,7 +4,7 @@ Version: 0.1.0
 Architecture: amd64
 Maintainer: J.B.Ward <j.bruce.ward@gmail.com>
 Installed-Size: 825
-Depends: libasound2 libqt5widgets5 libqt5gui5 libqt5core5a
+Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a
 Section: misc
 Priority: optional
 Homepage: https://github.com/FZBunny/applepi
