Improved installation/removal & control files.

--- a/package/deb/arm64/DEBIAN/control
+++ b/package/deb/arm64/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: applepi
-Source: J.B.Ward <j.bruce.ward@gmail.com>
-Version: 0.1.3
+Source:
+Version: 0.1.4
 Architecture: arm64
 Maintainer: J.B.Ward <j.bruce.ward@gmail.com>
 Installed-Size: * not yet measured *
