--- a/package/deb/armhf/DEBIAN/control
+++ b/package/deb/armhf/DEBIAN/control
@@ -1,6 +1,6 @@
 Package: applepi
-Source: J.B.Ward <j.bruce.ward@gmail.com>
-Version: 0.1.3
+Source:
+Version: 0.1.4
 Architecture: armhf
 Maintainer: J.B.Ward <j.bruce.ward@gmail.com>
 Installed-Size: 668
