--- a/package/deb/amd64/DEBIAN/control
+++ b/package/deb/amd64/DEBIAN/control
@@ -1,10 +1,10 @@
 Package: applepi
 Source:
-Version: 0.2.1
+Version: 0.2.2
 Architecture: amd64
 Maintainer: J.B.Ward <j.bruce.ward@gmail.com>
 Installed-Size: 845
-Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a, libqt5gamepad5, qtmultimedia5
+Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a, libqt5gamepad5, qtmultimedia5-dev
 Section: misc
 Priority: optional
 Homepage: https://github.com/FZBunny/applepi
