--- a/package/deb/arm64/DEBIAN/control
+++ b/package/deb/arm64/DEBIAN/control
@@ -4,7 +4,7 @@ Version: 0.1.4
 Architecture: arm64
 Maintainer: J.B.Ward <j.bruce.ward@gmail.com>
 Installed-Size: * not yet measured *
-Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a, libqt5gamepad5, qtmultimedia5
+Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a, libqt5gamepad5, qtmultimedia5-dev
 Section: misc
 Priority: optional
 Homepage: https://github.com/FZBunny/applepi
