--- a/package/deb/armhf/DEBIAN/control
+++ b/package/deb/armhf/DEBIAN/control
@@ -4,7 +4,7 @@ Version: 0.2.1
 Architecture: armhf
 Maintainer: J.B.Ward <j.bruce.ward@gmail.com>
 Installed-Size: 684
-Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a, libqt5gamepad5, qtmultimedia5
+Depends: libasound2, libqt5widgets5, libqt5gui5, libqt5core5a, libqt5gamepad5, qtmultimedia5-dev
 Section: misc
 Priority: optional
 Homepage: https://github.com/FZBunny/applepi
