--- a/applepi-win10/applepi-win10.vcxproj.filters
+++ b/applepi-win10/applepi-win10.vcxproj.filters
@@ -163,6 +163,9 @@
     <ClCompile Include="..\src\watchaddr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\qrc_resources.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\about.h">
@@ -294,5 +297,10 @@
     <ClInclude Include="..\src\watchaddr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <QtRcc Include="..\resources.qrc">
+      <Filter>Source Files</Filter>
+    </QtRcc>
   </ItemGroup>
 </Project>
