--- a/applepi-win10/applepi-win10.vcxproj.filters
+++ b/applepi-win10/applepi-win10.vcxproj.filters
@@ -166,6 +166,12 @@
     <ClCompile Include="..\qrc_resources.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\fetch.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\store.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\about.h">
